--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 MONGO_URL=mongodb+srv://lucapaduano09:4366eb2D@cluster0.izotj.mongodb.net/LittleItaly?retryWrites=true&w=majority
-NEXTAUTH_SECRET="ciao"
+NEXTAUTH_SECRET="https://little-italy1.vercel.app"
+NEXTAUT_URL="https://little-italy1.vercel.app"
 GOOGLE_CLIENT_ID="10918609012-a3pd3nsgouas1mlsf5jpvqpujevv6a32.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
