--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ NEXTAUTH_SECRET="https://little-italy1.vercel.app"
 NEXTAUT_URL="https://little-italy1.vercel.app"
 GOOGLE_CLIENT_ID="10918609012-a3pd3nsgouas1mlsf5jpvqpujevv6a32.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
-BASE_ENDOPOINT="http://localhost:3000/api/"
+BASE_ENDOPOINT="https://little-italy1.vercel.app/api/"
