--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ NEXTAUT_URL="https://little-italy1.vercel.app"
 GOOGLE_CLIENT_ID="10918609012-a3pd3nsgouas1mlsf5jpvqpujevv6a32.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="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"
 BASE_ENDOPOINT="https://little-italy1.vercel.app/api/"
+NEXT_PUBLIC_PAYPAL_CLIENT_ID="AZ9uyNErHpD-O8tWQxNZ-uKm1qIY8GwzNwyNJzqGLR-aj_MHl7-LXfuF_pyEUG_kiFvLFSiCYLt_TaSV"
