--- a/package.json
+++ b/package.json
@@ -10,13 +10,21 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@paypal/react-paypal-js": "^8.7.0",
+    "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/stripe-js": "^4.5.0",
     "framer-motion": "^10.18.0",
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.4.1",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "next-themes": "^0.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18",
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
