--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 MONGO_URL=mongodb+srv://lucapaduano09:4366eb2D@cluster0.izotj.mongodb.net/LittleItaly?retryWrites=true&w=majority
-NEXTAUTH_SECRET="https://little-italy1.vercel.app"
-NEXTAUT_URL="https://little-italy1.vercel.app"
-GOOGLE_CLIENT_ID="10918609012-a3pd3nsgouas1mlsf5jpvqpujevv6a32.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+NEXTAUTH_SECRET=https://little-italy1.vercel.app
+NEXTAUT_URL=https://little-italy1.vercel.app
+GOOGLE_CLIENT_ID=10918609012-a3pd3nsgouas1mlsf5jpvqpujevv6a32.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 NEXT_PUBLIC_BASE_ENDPOINT=https://little-italy1.vercel.app/api/
-NEXT_PUBLIC_PAYPAL_CLIENT_ID="AZ9uyNErHpD-O8tWQxNZ-uKm1qIY8GwzNwyNJzqGLR-aj_MHl7-LXfuF_pyEUG_kiFvLFSiCYLt_TaSV"
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=AZ9uyNErHpD-O8tWQxNZ-uKm1qIY8GwzNwyNJzqGLR-aj_MHl7-LXfuF_pyEUG_kiFvLFSiCYLt_TaSV
